openshift/service-tileservergl.yaml
kind: Service
apiVersion: v1
metadata:
  name: tileserver
  namespace: $namespace
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: tileserver
