openshift/route-tileserver.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tileserver
  namespace: $namespace
spec:
  host: tileserver-$namespace.apps.$domain
  to:
    kind: Service
    name: tileserver
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
